--- a/premium/erotic-blueprint_bedroom_adventurer.html
+++ b/premium/erotic-blueprint_bedroom_adventurer.html
@@ -1,1 +1,320 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Bedroom Adventurer – Erotic Blueprint</title>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+  <style>
+    body {
+      background-color: #06954E;
+      color: white;
+      font-family: 'Montserrat', sans-serif;
+      margin: 0;
+      padding: 0 1.5rem;
+    }
 
+    .container {
+      max-width: 900px;
+      margin: 0 auto;
+      padding: 2rem 0;
+      border: 5px solid gold;
+    }
+
+    .logo {
+      display: block;
+      margin: 20px auto 10px;
+      max-width: 120px;
+    }
+
+    h1 {
+      font-size: 2.5rem;
+      text-align: center;
+      color: white;
+      text-shadow: 0 0 5px #90ee90, 0 0 10px #90ee90;
+      margin-bottom: 0.5rem;
+    }
+
+    .quote {
+      font-style: italic;
+      font-size: 1rem;
+      text-align: center;
+      margin-bottom: 1.5rem;
+    }
+
+    .image-container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 1rem;
+      margin-bottom: 2rem;
+      max-width: 700px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+
+    .image-half {
+      flex: 1;
+      border: 4px solid gold;
+      padding: 5px;
+    }
+
+    .image-half img {
+      width: 100%;
+      object-fit: cover;
+      display: block;
+    }
+
+    h2 {
+      border-top: 1px solid gold;
+      border-bottom: 1px solid gold;
+      padding: 0.75rem 0;
+      margin-top: 2rem;
+      margin-bottom: 1rem;
+      font-size: 1.5rem;
+      color: white;
+    }
+
+    ul {
+      padding-left: 1.5rem;
+      margin-bottom: 1rem;
+    }
+
+    .sub {
+      margin-left: 1.4rem;
+      font-style: italic;
+      color: #c7c7c7;
+      list-style: none;
+      padding-left: 1rem;
+    }
+
+    p {
+      margin-bottom: 1rem;
+      line-height: 1.6;
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <img src="../golden-le-libido-logo.png" alt="Le Libido Logo" class="logo">
+    <h1>Bedroom Adventurer</h1>
+    <div class="quote">“New cities, new positions, same safe word.” — Anonymous</div>
+
+    <div class="image-container">
+      <div class="image-half">
+        <img src="../images/bedroom_adventurer_female.jpg" alt="Bedroom Adventurer Female">
+      </div>
+      <div class="image-half">
+        <img src="../images/bedroom_adventurer_male.jpg" alt="Bedroom Adventurer Male">
+      </div>
+    </div>
+
+    <p><strong>Slogan:</strong> I'm up for anything and like to get down and dirty.</p>
+
+    <p>You crave novelty. You like to stir things up and test the edges. You’re turned on by the idea that anything could happen and you might be the one to make it happen. Research shows that eroticism thrives on psychological novelty. You’re not looking to disrupt, you’re looking to discover.</p>
+        <h2>Power Dynamic Arc</h2>
+    <p><strong>Relationship Trajectory:</strong><br>
+    Bedroom Adventurers thrive in novelty, exploration, and dynamic play. Their polarity is mood-dependent but assertive — they lean dominant when their curiosity is piqued. Relationships flourish when spontaneity is welcome and erotic permission is mutual. Rigidity or repetition leads to detachment.</p>
+
+    <p><strong>Polarity Shift Graph (Stock Chart Style):</strong></p>
+    <ul>
+      <li>Mood-based dominance paired with playful partner → 📈 Energetic upward curve</li>
+      <li class="sub">Relationship becomes a thrilling co-creation</li>
+      <li>Bedroom Adventurer forced into submissive-only role → 📉 Boredom crash</li>
+      <li class="sub">Feels boxed in or misunderstood</li>
+      <li>Adventurer becomes dominant with emotionally closed partner → ⚠️ Flatline</li>
+      <li class="sub">Mood-driven assertiveness feels misfired or unrewarded</li>
+      <li>Mutual exploration with responsive partner → 📊 Renewed spike</li>
+      <li class="sub">Trust builds through novelty and permission</li>
+    </ul>
+
+    <p><strong>Ideal Dynamic:</strong><br>
+    Their healthiest relationships involve a playful, sex-positive partner who embraces unpredictability. Mutual curiosity, permission to explore, and the freedom to lead based on internal arousal are essential to long-term fulfillment.</p>
+
+    <h2>Origins of Desire</h2>
+    <p>Bedroom Adventurers are turned on by novelty, anticipation, and the possibility that anything could happen. Their sexuality is exploratory, pleasure is not the endpoint, it’s the journey. They eroticize spontaneity, risk, and the thrill of uncovering new dynamics.</p>
+
+    <p><strong>Theoretical Explanations:</strong></p>
+    <ul>
+      <li><strong>Mimetic Desire Theory:</strong> They’ve observed that adventurous, sexually confident people receive attention, admiration, and pleasure. Imitating that model becomes arousing in itself.</li>
+      <li><strong>Imprintation Theory:</strong> Early sexual excitement may have been linked to secrecy, sneaking around, or stumbling into something forbidden, locking in a craving for the unknown.</li>
+      <li><strong>Evolutionary Biological Theory:</strong> Their drive for variety may signal genetic fitness or a strategy for reproductive diversity. Their curiosity becomes a mating advantage.</li>
+      <li><strong>Diminished Disgust Theory:</strong> Arousal overrides hesitation. They seek out taboo or “weird” pleasures because being turned on lowers their disgust reflex, opening the door to new sensations.</li>
+      <li><strong>Psychological Rough-Housing Theory:</strong> They play with power as a way of learning limits, testing rules, and turning playful defiance into intimacy. They eroticize transgression.</li>
+    </ul>
+
+    <h2>Turn-On Vocabulary</h2>
+    <ul>
+      <li>“Let’s try something new”</li>
+      <li>“You game?”</li>
+      <li>“I’ve never done this before… but I want to”</li>
+      <li>“Show me what turns you on”</li>
+      <li>“What if I told you I packed a toy?”</li>
+      <li>“Take me somewhere private”</li>
+      <li>“You’re trouble. I like trouble.”</li>
+      <li>“I’ve got an idea”</li>
+      <li>“We don’t have to stop there”</li>
+      <li>“Let’s make a memory”</li>
+    </ul>
+
+    <h2>Conflict Pattern</h2>
+    <p><strong>Tendencies During Conflict:</strong></p>
+    <ul>
+      <li>Avoids emotional intensity by shifting to humor or distraction</li>
+      <li>Minimizes issues to keep things light</li>
+      <li>Feels trapped when asked to explain internal motivations</li>
+      <li>May disengage if the relationship becomes too routine or serious</li>
+    </ul>
+
+    <p><strong>Triggers:</strong></p>
+    <ul>
+      <li>Being accused of flakiness or immaturity</li>
+      <li>Feeling surveilled or micromanaged</li>
+      <li>A partner who stops being sexually open or curious</li>
+      <li>Repeating the same emotional loops without resolution</li>
+    </ul>
+
+    <p><strong>Resolution Style:</strong></p>
+    <ul>
+      <li>Responds best to playful reentry into connection</li>
+      <li>Heals through experiences, not lectures</li>
+      <li>Needs to feel safe enough to be emotionally vulnerable, without losing their sense of freedom</li>
+      <li>Conflict dissolves through shared novelty and intimacy, not over-analysis</li>
+    </ul>
+
+    <p><strong>Growth Edge:</strong><br>
+    Learning to stay emotionally present, even when things get heavy. Understanding that intimacy does not mean restriction. Communicating deeper needs beneath the play.</p>
+
+    <h2>Erotic Edge & Drop</h2>
+    <p><strong>Erotic Edge:</strong><br>
+    What makes them unforgettable is the sense that nothing is off-limits. They bring confidence, creativity, and a readiness to push erotic boundaries, whether it’s toys, settings, group dynamics, or roleplay. They’re the partner people fantasize about long after it’s over.</p>
+
+    <p><strong>Erotic Drop (Dealbreaker):</strong><br>
+    Repetition and repression. If sex becomes a routine or their partner is unwilling to explore, they lose interest. They disconnect quickly if shamed for being too “much,” or if their erotic boldness is met with judgment.</p>
+        <h2>Erotic Short Story</h2>
+    <p>The afterparty is on the 32nd floor of a boutique hotel downtown. Someone rented out the penthouse for the night, curved glass walls, open bar, green and gold LED strips lining the ceiling. You weren’t planning to stay long, just long enough to flirt, maybe swipe a few cocktails, soak up the view.</p>
+
+    <p>It’s sometime after midnight. The afterparty is in full swing. Music throbs through the walls, syncing with the pulse you’re just now starting to feel in your core.</p>
+
+    <p>You sip something strong and sparkling. Your body’s relaxed, but your mind’s alert, scanning.</p>
+
+    <p>You like the randomness of nights like this. The possibility. New city, new strangers, new scenes. Anything could happen, and you’re in the exact mood to make sure it does.</p>
+
+    <p>Someone catches your eye across the room. They’re perched on a velvet couch, laughing, sprawled like they own the place. Not the loudest, not the flashiest, but magnetic.</p>
+
+    <p>You move before you even think.</p>
+
+    <p>“Comfortable?” you ask, standing just close enough to get their attention.</p>
+
+    <p>They glance up, amused. “I was. Now I’m intrigued.”</p>
+
+    <p>You smirk. “Even better.”</p>
+
+    <p>The banter flows fast. You talk nonsense and flirt with your eyes. They’re witty. Relaxed. Open. The type who knows how to follow a lead, and how to pass the ball back.</p>
+
+    <p>Another body joins. Their friend. Taller, quieter. Same easy smile, same curious gaze. Their energy doesn’t compete, it completes.</p>
+
+    <p>Your smile shifts. That spark’s hit. You’re not bold because of them, you’re bold because tonight, your body says yes.</p>
+
+    <p>“So,” you say casually, “what’s your stance on sharing?”</p>
+
+    <p>The one on the couch grins. “I’m listening.”</p>
+
+    <p>Their friend tilts their head. “That depends on what you’re offering.”</p>
+
+    <p>Your voice lowers. “A night you won’t forget.”</p>
+
+    <p>The taller one looks at you and smirks, “you’re trouble aren’t you?”</p>
+
+    <p>You let out a laugh, "I do have a tendency to misbehave.”</p>
+
+    <p>The three of you exchange glances. Mutual mischief sparks.</p>
+
+    <p>You lead them to the private bedroom. Double doors, plush bedding, dim gold lighting. You close the doors behind you, turn, and pause, just long enough to make them wait.</p>
+
+    <p>“Do you two always come as a set, or is this just my lucky night?”</p>
+
+    <p>They smile in sync.</p>
+
+    <p>You like that moment. The moment before the moment. When anything could still happen.</p>
+
+    <p>“I’m in the mood to call the shots,” you say, calm but electric.</p>
+
+    <p>No one argues.</p>
+
+    <p>You guide them with just your voice and your eyes. One sits on the bed. The other stands by the mirror, watching. Waiting. You walk between them, setting the pace.</p>
+
+    <p>You press a kiss to one of their necks. Slow, deliberate. Just your lips. Then a quick bite. Not to mark, just to claim the moment.</p>
+
+    <p>Your hands trail down their chest. You lean in and whisper, “Don’t move until I say so.”</p>
+
+    <p>Their breath hitches. You pivot to the other, slide a finger along their waistband.</p>
+
+    <p>“You,” you murmur, “strip first.”</p>
+
+    <p>They obey. Shirt. Pants. Underwear. Confidence in every movement, but also curiosity. You like curious. Curious makes for better play.</p>
+
+    <p>You make them kneel on the mattress. Then you step back, just to admire.</p>
+
+    <p>“Stay,” you say, then toss your drink back and set the glass down with a soft clink.</p>
+
+    <p>You slowly unbutton your shirt. One… two… three…</p>
+
+    <p>Their eyes drink in every inch.</p>
+
+    <p>You move like you know you’re the hottest thing in the room. Not because of how you look but because of how you feel. You’ve decided this is your scene. Your story. And you’re going to write it with your fingertips.</p>
+
+    <p>You walk behind the kneeling one, brush your palm down their spine, and push them gently forward. Then turn to the other. “On your knees too. I want to see both of you like that.”</p>
+
+    <p>They follow your lead, eager, breathless, utterly captivated. Waiting for your next move like it’s the only thing that matters.</p>
+
+    <p>The power in the room shifts. Not because you took it. Because your mood made space for it. You’re not performing dominance, tonight you are dominance. When it hits, it hits. And right now? It’s hitting hard.</p>
+
+    <p>You kneel between them.</p>
+
+    <p>Your hands explore, one body, then the other. You keep it balanced, teasing, drawing out sighs and gasps from both. You let them lean into you. Let them get hungry. Let them crave your next move.</p>
+
+    <p>When you decide to taste, it’s deliberate. You press your mouth to one of them, hot and slow, tongue working in rhythm. They gasp, arch, try not to fall apart too fast.</p>
+
+    <p>“Not yet,” you murmur. “We’re just getting started.”</p>
+
+    <p>You move to the other. Different pace. Different pressure. You want to make sure no one gets the same version of you. That’s the fun of it. That’s the game.</p>
+
+    <p>They’re moaning already, and you’ve barely even started.</p>
+
+    <p>You stand again, strip fully, and climb onto the bed. Pull one of them up with you, straddling them. “You seem like you need a little attention,” you whisper.</p>
+
+    <p>They groan as your hips grind down. The other watches, breath heavy, hand sliding lower.</p>
+
+    <p>“Not yet,” you say, voice sharp. “Be patient, I’m going to make you wait until you can’t stand it.”</p>
+
+    <p>You ride slowly, building friction, feeding off the reactions. You’re feeling the heat now, not just from the bodies beneath you, but from the thrill of calling the shots.</p>
+
+    <p>You pause and slide off. “Switch.”</p>
+
+    <p>Now you’re on your back, one between your thighs, the other kissing your neck.</p>
+
+    <p>You don’t have to say a word. They’ve synced to your rhythm, driven by the same heat that’s pulsing through your spine.</p>
+
+    <p>They work in sync, mouths and fingers, your body arching in response. You grab the sheets. You moan maybe a little too loud.</p>
+
+    <p>The three of you tangle until it’s impossible to know who’s giving, who’s taking, who’s leading. You are everywhere, and so are they. Heat layered on heat. Sweat mixing with laughter. Your voice gets breathless, then loud. You don’t care who hears.</p>
+
+    <p>By the time you’re collapsed in a pile of limbs, you’re flushed, slick, and completely high on yourself.</p>
+
+    <p>You roll to the side, chest heaving. “Well,” you say, “that was fun.”</p>
+
+    <p>One of them laughs. “You always like to take charge like that?”</p>
+
+    <p>You shake your head. “Only when I feel like it.”</p>
+
+    <p>They smile. “Hope you feel like it again sometime.”</p>
+
+    <p>You grin and pull them both back in. “Give me ten minutes.”</p>
+
+    <p>Because when you're in the mood, there’s no question, you take the lead.</p>
+
+  </div>
+</div>
+</body>
+</html>
