--- a/premium/erotic-blueprint_bedroom_adventurer.html
+++ b/premium/erotic-blueprint_bedroom_adventurer.html
@@ -8,78 +8,71 @@
   <style>
     body {
       background-color: #06954E;
-      color: white;
       font-family: 'Montserrat', sans-serif;
-      margin: 0;
-      padding: 0 1.5rem;
-    }
-
-    .container {
-      max-width: 900px;
-      margin: 0 auto;
-      padding: 2rem 0;
-      border: 5px solid gold;
-    }
-
-    .logo {
-      display: block;
-      margin: 20px auto 10px;
-      max-width: 120px;
-    }
-
-    h1 {
-      font-size: 2.5rem;
-      text-align: center;
       color: white;
-      text-shadow: 0 0 5px #90ee90, 0 0 10px #90ee90;
-      margin-bottom: 0.5rem;
+      margin: 0;
+      padding: 0 20px;
+      border: 5px solid #e1bf78;
+      box-sizing: border-box;
     }
-
-    .quote {
-      font-style: italic;
-      font-size: 1rem;
+    .logo {
+      max-width: 120px;
+      margin: 40px auto 20px;
+      display: block;
+    }
+    h1 {
       text-align: center;
-      margin-bottom: 1.5rem;
+      font-style: italic;
+      text-shadow: 0 0 3px #5affb6, 0 0 3px #5affb6;
+      margin-bottom: 20px;
+      font-size: 38px;
     }
-
+    .slogan {
+      text-align: center;
+      font-style: italic;
+      color: #b4ffde;
+      margin-top: 10px;
+    }
+    .quote {
+      text-align: center;
+      font-style: italic;
+      color: #8affcc;
+      margin-bottom: 40px;
+    }
     .image-container {
+      border: 4px solid #e1bf78;
+      border-radius: 12px;
+      overflow: hidden;
       display: flex;
       justify-content: center;
-      align-items: center;
-      gap: 1rem;
-      margin-bottom: 2rem;
+      align-items: stretch;
+      width: 100%;
       max-width: 700px;
-      margin-left: auto;
-      margin-right: auto;
+      margin: 0 auto 30px auto;
     }
-
     .image-half {
       flex: 1;
-      border: 4px solid gold;
-      padding: 5px;
     }
-
     .image-half img {
-      width: 100%;
-      object-fit: cover;
       display: block;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      pointer-events: none;
+      user-select: none;
     }
-
+    .divider {
+      width: 4px;
+      background-color: #e1bf78;
+    }
     h2 {
-      border-top: 1px solid gold;
-      border-bottom: 1px solid gold;
-      padding: 0.75rem 0;
-      margin-top: 2rem;
-      margin-bottom: 1rem;
-      font-size: 1.5rem;
-      color: white;
+      font-style: italic;
+      color: #e1bf78;
+      margin-top: 40px;
     }
-
     ul {
-      padding-left: 1.5rem;
-      margin-bottom: 1rem;
+      margin-left: 20px;
     }
-
     .sub {
       margin-left: 1.4rem;
       font-style: italic;
@@ -87,31 +80,23 @@
       list-style: none;
       padding-left: 1rem;
     }
-
-    p {
-      margin-bottom: 1rem;
-      line-height: 1.6;
-    }
   </style>
 </head>
 <body>
-  <div class="container">
-    <img src="../golden-le-libido-logo.png" alt="Le Libido Logo" class="logo">
-    <h1>Bedroom Adventurer</h1>
-    <div class="quote">“New cities, new positions, same safe word.” — Anonymous</div>
+  <img src="/golden-le-libido-logo.png" alt="Le Libido Logo" class="logo">
+  <h1>Promiscuous Plaything</h1>
+  <p class="slogan">I'm up for anything and like to get down and dirty.</p>
+  <p class="quote">“New cities, new positions, same safe word.” - Anonymous</p>
 
-    <div class="image-container">
-      <div class="image-half">
-        <img src="../images/bedroom_adventurer_female.jpg" alt="Bedroom Adventurer Female">
-      </div>
-      <div class="image-half">
-        <img src="../images/bedroom_adventurer_male.jpg" alt="Bedroom Adventurer Male">
-      </div>
+  <div class="image-container">
+    <div class="image-half">
+      <img src="/images/bedroom_adventurer_female.jpg" alt="Female Bedroom Adventurer">
     </div>
-
-    <p><strong>Slogan:</strong> I'm up for anything and like to get down and dirty.</p>
-
-    <p>You crave novelty. You like to stir things up and test the edges. You’re turned on by the idea that anything could happen and you might be the one to make it happen. Research shows that eroticism thrives on psychological novelty. You’re not looking to disrupt, you’re looking to discover.</p>
+    <div class="divider"></div>
+    <div class="image-half">
+      <img src="/images/bedroom_adventurer_male.jpg" alt="Male Bedroom Adventurer">
+    </div>
+  </div>
         <h2>Power Dynamic Arc</h2>
     <p><strong>Relationship Trajectory:</strong><br>
     Bedroom Adventurers thrive in novelty, exploration, and dynamic play. Their polarity is mood-dependent but assertive — they lean dominant when their curiosity is piqued. Relationships flourish when spontaneity is welcome and erotic permission is mutual. Rigidity or repetition leads to detachment.</p>
