--- a/premium/erotic-blueprint_bedroom_adventurer.html
+++ b/premium/erotic-blueprint_bedroom_adventurer.html
@@ -84,7 +84,7 @@
 </head>
 <body>
   <img src="/golden-le-libido-logo.png" alt="Le Libido Logo" class="logo">
-  <h1>Promiscuous Plaything</h1>
+  <h1>Bedroom Adventurer</h1>
   <p class="slogan">I'm up for anything and like to get down and dirty.</p>
   <p class="quote">“New cities, new positions, same safe word.” - Anonymous</p>
 
