--- a/premium/erotic-blueprint_charmer_in_charge.html
+++ b/premium/erotic-blueprint_charmer_in_charge.html
@@ -1,1 +1,334 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Charmer in Charge – Erotic Blueprint</title>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+  <style>
+    body {
+      background-color: #06954E;
+      font-family: 'Montserrat', sans-serif;
+      color: white;
+      margin: 0;
+      padding: 0 20px;
+      border: 5px solid #e1bf78;
+      box-sizing: border-box;
+    }
+    .logo {
+      max-width: 120px;
+      margin: 40px auto 20px;
+      display: block;
+    }
+    h1 {
+      text-align: center;
+      font-style: italic;
+      text-shadow: 0 0 3px #5affb6, 0 0 3px #5affb6;
+      margin-bottom: 20px;
+      font-size: 38px;
+    }
+    .slogan {
+      text-align: center;
+      font-style: italic;
+      color: #b4ffde;
+      margin-top: 10px;
+    }
+    .quote {
+      text-align: center;
+      font-style: italic;
+      color: #8affcc;
+      margin-bottom: 40px;
+    }
+    .image-container {
+      border: 4px solid #e1bf78;
+      border-radius: 12px;
+      overflow: hidden;
+      display: flex;
+      justify-content: center;
+      align-items: stretch;
+      width: 100%;
+      max-width: 700px;
+      margin: 0 auto 30px auto;
+    }
+    .image-half {
+      flex: 1;
+    }
+    .image-half img {
+      display: block;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      pointer-events: none;
+      user-select: none;
+    }
+    .divider {
+      width: 4px;
+      background-color: #e1bf78;
+    }
+    h2 {
+      font-style: italic;
+      color: #e1bf78;
+      margin-top: 40px;
+    }
+    ul {
+      margin-left: 20px;
+    }
+    .sub {
+      margin-left: 1.4rem;
+      font-style: italic;
+      color: #c7c7c7;
+      list-style: none;
+      padding-left: 1rem;
+    }
+  </style>
+</head>
+<body>
+  <img src="/golden-le-libido-logo.png" alt="Le Libido Logo" class="logo">
+  <h1>Charmer in Charge</h1>
+  <p class="slogan">You don’t just take control. You make them beg for it.</p>
+  <p class="quote">“Power isn’t taken. It’s given—willingly.” – Toni Morrison</p>
 
+  <div class="image-container">
+    <div class="image-half">
+      <img src="/images/charmer_in_charge_female.jpg" alt="Female Charmer in Charge">
+    </div>
+    <div class="divider"></div>
+    <div class="image-half">
+      <img src="/images/charmer_in_charge_male.jpg" alt="Male Charmer in Charge">
+    </div>
+  </div>
+    <h2>Power Dynamic Arc</h2>
+  <p><strong>Relationship Trajectory:</strong><br>
+  The Charmer in Charge doesn’t shift into dominance—it’s simply who they are. Their control is erotic, magnetic, and natural. They don’t force it. They attract it. Relationships flourish when partners surrender willingly, drawn to the Charmer’s charisma, not coerced by power.</p>
+
+  <p><strong>Polarity Shift Graph (Stock Chart Style):</strong></p>
+  <ul>
+    <li>Confident, charismatic presence with flirtatious partner → 📈 Magnetic surge</li>
+    <li class="sub">Partners respond with eagerness and desire</li>
+    <li>Attempts to control someone unwilling → 📉 Sudden drop</li>
+    <li class="sub">Charm is met with resistance, confidence becomes arrogance</li>
+    <li>Charmer hides true desires to please others → ⚠️ Power plateau</li>
+    <li class="sub">Seduction turns into performance, not connection</li>
+    <li>Leads with relaxed control and mutual play → 📊 Climactic return</li>
+    <li class="sub">Surrender is offered, not taken</li>
+  </ul>
+
+  <p><strong>Ideal Dynamic:</strong><br>
+  Partners who are already drawn to power and persuasion are the best fit. The Charmer doesn’t demand submission—they invite it with every word, look, and gesture. The ideal partner yields because they want to, not because they have to.</p>
+
+  <h2>Origins of Desire</h2>
+  <p>The Charmer learned early that presence—not pressure—is power. Their sexuality formed around the idea that control is something you’re given because you’ve earned it. They eroticize influence, anticipation, and the moment when someone finally says yes because they want to, not because they were told to.</p>
+
+  <p><strong>Theoretical Explanations:</strong></p>
+  <ul>
+    <li><strong>Attachment Theory:</strong> Their confident energy comes from secure bonding. They feel safe taking the lead because they believe intimacy doesn’t threaten independence.</li>
+    <li><strong>Mimetic Desire:</strong> They’ve seen that power can be sexy. Authority figures, celebrities, or dominant peers were eroticized, not because they forced control—but because others wanted them.</li>
+    <li><strong>Imprintation:</strong> Early sexual experiences may have included teasing, being watched, or moments where they seduced through charisma rather than force—encoding the thrill of earned control.</li>
+    <li><strong>Social Conditioning:</strong> Their self-image is built around being “the one in charge”—in work, life, and bed. Dominance becomes part of identity, not just a role.</li>
+  </ul>
+
+  <h2>Turn-On Vocabulary</h2>
+  <ul>
+    <li>“Say it like you mean it.”</li>
+    <li>“Look at me when you beg.”</li>
+    <li>“You knew exactly what you were doing.”</li>
+    <li>“Let’s see how long you can hold out.”</li>
+    <li>“I don’t ask twice.”</li>
+    <li>“Is this what you came for?”</li>
+    <li>“Good. Now do it again.”</li>
+    <li>“Take it. All of it.”</li>
+    <li>“You want to be good for me?”</li>
+    <li>“There’s only one person in charge here.”</li>
+  </ul>
+
+  <h2>Conflict Pattern</h2>
+  <p><strong>Tendencies During Conflict:</strong></p>
+  <ul>
+    <li>May become controlling or manipulative when vulnerable</li>
+    <li>Resists feedback if it challenges their confidence</li>
+    <li>Can use seduction to deflect real emotional accountability</li>
+    <li>Struggles when they feel unappreciated or unseen</li>
+  </ul>
+
+  <p><strong>Triggers:</strong></p>
+  <ul>
+    <li>Being dismissed or emotionally ignored</li>
+    <li>Loss of admiration or sexual attention</li>
+    <li>Partners who resist just to test their power</li>
+    <li>Being accused of manipulation when their intent was connection</li>
+  </ul>
+
+  <p><strong>Resolution Style:</strong></p>
+  <ul>
+    <li>Prefers clarity and emotional directness</li>
+    <li>Needs reassurance that their dominance is wanted</li>
+    <li>Heals through erotic repair, not long conversations</li>
+    <li>Reconnection happens when their confidence is met with trust</li>
+  </ul>
+
+  <p><strong>Growth Edge:</strong><br>
+  Learning to hold power without needing constant affirmation. Letting go of control when it serves deeper intimacy. Understanding that real seduction includes emotional risk—not just performance.</p>
+
+  <h2>Erotic Edge & Drop</h2>
+  <p><strong>Erotic Edge:</strong><br>
+  Their erotic superpower is persuasion. They know how to guide a scene without raising their voice. A raised eyebrow, a smirk, a simple command—and suddenly, their partner is undone. The Charmer’s sex appeal is psychological and contagious. You surrender without even realizing it.</p>
+
+  <p><strong>Erotic Drop (Dealbreaker):</strong><br>
+  If their dominance is doubted or constantly tested, they disengage. They lose interest when power struggles replace play. If their charm is seen as manipulation or their leadership isn’t trusted, they go cold.</p>
+    <h2>Erotic Short Story</h2>
+
+  <p>You slip into the first-class cabin just before the doors close. You aren’t late, you just like arriving after everyone’s seated. Makes it easier to scan the room and decide what you want.</p>
+
+  <p>Across the aisle, someone’s already watching you. Interesting eyes. Curious. Confident enough to hold your gaze, unsure enough to keep flicking it away.</p>
+
+  <p>You let them look.</p>
+
+  <p>You pause right in front of them, raise an eyebrow, and nod toward the window seat beside them.</p>
+
+  <p>“That one mine?”</p>
+
+  <p>They glance down, then up. “Looks like it.”</p>
+
+  <p>You slide in next to them with a casual elegance that suggests you’ve done this many times. And not just flying.</p>
+
+  <p>“Lucky me,” you say, and it doesn’t sound like a pick-up line. It sounds like a fact.</p>
+
+  <p>They smirk. “Confident.”</p>
+
+  <p>You tilt your head. “Shouldn’t I be?”</p>
+
+  <p>They brush their hair off, instinctive grooming themself in the presence of someone they want to impress — you. Then they smile coyly and say, “Well they do say fortune favors the bold for a reason.”</p>
+
+  <p>The jet engines roar to life, and so does something inside you.</p>
+
+  <p>You know that they didn’t expect to find someone like you at thirty thousand feet. But here you are, poised, magnetic, taking up space like it’s yours to own. Not loud. Not cocky. Just… certain.</p>
+
+  <p>The plane ascends. Champagne is poured. You remain still. The art of power, you know, is restraint.</p>
+
+  <p>Their arm brushes yours deliberately. They’re testing the waters.</p>
+
+  <p>You let it linger, then lean closer and ask, “Are you traveling for business or pleasure?”</p>
+
+  <p>They turn toward you completely now. “Well I was here on business.”</p>
+
+  <p>“You know, when I noticed you earlier,” you murmur, “I thought you looked like someone who usually takes charge.”</p>
+
+  <p>They raise an eyebrow. “I do in my professional life.”</p>
+
+  <p>You smile slowly. “Oh, so you’re dominant in the streets and submissive in the sheets?”</p>
+
+  <p>They blush, as if you just found out their secret. They wait to respond and let out a soft whisper, “Is it that obvious?”</p>
+
+  <p>The plane hums beneath your feet. The lights dim. And the air between you turns electric.</p>
+
+  <p>You look deep into their eyes. “I knew you’d want me to take control the moment I saw you look at me.”</p>
+
+  <p>Their eyes widen and they swallow, frazzled.</p>
+
+  <p>You smirk. “Fortune favors the bold.”</p>
+
+  <p>They laugh. “Well you certainly are bold.”</p>
+
+  <p>You ask for a refill. The attendant obliges. You offer them a glass before sipping your own.</p>
+
+  <p>They watch your mouth as you drink.</p>
+
+  <p>“Tell me,” you ask, voice velvet, “do you always stare that much, or am I special?”</p>
+
+  <p>They smirk. “Both.”</p>
+
+  <p>Your grin widens. “Good answer.”</p>
+
+  <p>You shift, turning to face them fully, your knee brushing theirs.</p>
+
+  <p>“I’m feeling indulgent,” you say. “Would you like to follow me?”</p>
+
+  <p>They pause. “Where?”</p>
+
+  <p>You lean in. “Somewhere more… private.”</p>
+
+  <p>You rise without waiting for a response. You don’t need one. You already know they’ll follow.</p>
+
+  <p>The lavatory door clicks shut behind you. It’s tight, but you’ve made tighter spaces feel like theaters. You lock the door and turn around slowly.</p>
+
+  <p>They’re standing just inside, waiting for instruction.</p>
+
+  <p>You look them up and down like you’re inspecting something you might purchase.</p>
+
+  <p>“Take off your shirt,” you say softly.</p>
+
+  <p>They hesitate for a beat, then obey.</p>
+
+  <p>You reach out, fingertip tracing the edge of their collarbone. “You really are a good listener.”</p>
+
+  <p>You press them gently against the wall, your palm flat against their chest.</p>
+
+  <p>“Keep your hands at your sides,” you command. “Let me enjoy you.”</p>
+
+  <p>You lean in, your lips graze theirs but don’t commit. They tilt forward instinctively. You pull back.</p>
+
+  <p>“Not yet,” you whisper. “I like watching you want it.”</p>
+
+  <p>Your hand slides down, tracing their torso, teasing just enough to keep them guessing. You kiss their neck, slow and hot, until their breath catches.</p>
+
+  <p>You unbutton your shirt methodically. You don’t rush. The show is part of the control.</p>
+
+  <p>Their eyes never leave you.</p>
+
+  <p>“I like this so far,” you murmur. “But I want more.”</p>
+
+  <p>You guide their hands to your hips. “Touch. But only where I let you.”</p>
+
+  <p>They obey, reverently. Charmed, clearly under your spell.</p>
+
+  <p>You slide a thigh between theirs and grind gently, letting pressure speak louder than words. They moan softly, already lost.</p>
+
+  <p>You kiss them hard now—deep, claiming, dominant. They melt under you, opening like a secret.</p>
+
+  <p>You turn them around, facing the mirror. You lock eyes with their reflection.</p>
+
+  <p>Your hand snakes around their waist, pulling them back into you. You bite their shoulder, not to hurt, just to own.</p>
+
+  <p>You watch their face in the mirror as your other hand slides lower. They gasp, then whimper.</p>
+
+  <p>“You’re going to be good for me,” you whisper. “Say it.”</p>
+
+  <p>“I’ll be good for you,” they murmur, breathless.</p>
+
+  <p>You smirk. “That’s right.”</p>
+
+  <p>You kiss your way down their back, tasting their skin. When you rise again, they’re trembling.</p>
+
+  <p>You pin their wrists above their head. “You don’t get to come just because you want to. You have to wait for permission.”</p>
+
+  <p>They nod frantically, desperate and aching.</p>
+
+  <p>You straddle one of their thighs and grind slowly, keeping control of the rhythm, the friction, the noise. You moan low, letting them hear how much you’re enjoying yourself—because their pleasure is your power, but your pleasure is their undoing.</p>
+
+  <p>You speed up, then slow down. You want them flushed and begging. You want their knees to buckle from wanting you.</p>
+
+  <p>When you finally let them touch you fully, it’s not a gift, it’s a reward.</p>
+
+  <p>They explore you with urgency, desperate to please. You tilt your head back, grip their hair, and guide their pace.</p>
+
+  <p>“You’re learning what I like,” you whisper. “But you can still do better.”</p>
+
+  <p>You press them to the wall again, lifting one leg, taking what you want with slow, grinding strokes. You ride the rhythm of their moans, steering the pace, keeping them under you.</p>
+
+  <p>Your climax hits in waves, thick and hot and blinding.</p>
+
+  <p>You don’t hide it. You let them see every second of it. Let them feel how completely you’ve let go, while still keeping total control.</p>
+
+  <p>When you’re done, you exhale, lips still parted, gaze still locked on theirs.</p>
+
+  <p>They look dazed.</p>
+
+  <p>You tuck yourself back together, smooth, unbothered, in charge even as your heart pounds.</p>
+
+  <p>They’re still leaning against the wall.</p>
+
+  <p>You slap their thigh gently. “Up.”</p>
+
+  <p>They scramble to get dressed. You fix your hair in the mirror.</p>
+
+  <p>“Welcome to the mile-high club,” you say. “Aren’t you glad we met?”</p>
